# BidPilot

./: .env.example  .gitignore  DATASET_BUILD_REPORT.md  DATASET_FINAL_PREFLIGHT_REPORT.md  DATASET_QUALITY_FIX_REPORT.md  DATASET_TRAINING_GATE_REPORT.md  INITIAL_SCAFFOLD_REPORT.md  Makefile  README.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a34e7a76f341_initial_schema.py  b7c1d2e3f4a5_add_ocr_required_parse_status.py  c8d2e3f4a5b6_add_requirement_extraction_runs.py  d9e3f4a5b6c7_add_requirement_evidence_matching.py  e0f4a5b6c7d8_add_requirement_match_review.py  f1a5b6c7d8e9_add_proposal_drafting.py  g2b6c7d8e9f0_add_compliance_runs.py  h3c7d8e9f0a1_add_compliance_run_error_code.py  i4d8e9f0a1b2_extend_agent_runs.py  j5e9f0a1b2c3_agent_step_unique_index.py  k6f0a1b2c3d4_agent_events_timeline.py  l7a1b2c3d4e5_agent_event_idempotency_attempt.py  m8b2c3d4e5f6_agent_step_attempt.py  n9c3d4e5f6a7_execution_claim_and_step_attempt_uq.py  o0d4e5f6a7b8_evaluation_center.py  p1e5f6a7b8c9_structured_clause_analyses.py
backend/app/: main.py
backend/app/agent/: __init__.py  checkpoint.py  graph.py  routing.py  state.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_async_permissions.py  test_agent_checkpoint_resume.py  test_agent_e2e_scenarios.py  test_agent_event_sequence.py  test_agent_lifecycle_hardening.py  test_agent_midrun_visibility.py  test_agent_nodes.py  test_agent_persist_attempt_graph.py  test_agent_routing.py  test_agent_service.py  test_agent_sse.py  test_agent_state.py  test_agent_step11_api_acceptance.py  test_agent_unified_events.py  test_agent_validate_formal.py  test_chunk_api.py  test_chunker.py  test_compliance_api.py  test_compliance_engine.py  test_compliance_tools.py  test_cors.py  test_demo_import.py  test_document_upload.py  test_evaluation_api.py  test_evaluation_cancel.py  test_evaluation_citations.py  test_evaluation_idempotency_pg.py  test_evaluation_leakage.py  test_evaluation_metrics.py  test_evaluation_permissions.py  test_evaluation_rag_scope.py  test_evaluation_runner.py  test_evaluation_session_isolation.py  test_evaluation_suite.py  test_health.py  test_indexing_and_search.py  test_llamafactory_sharegpt.py  test_model_registry.py  (+11 more)
data_pipeline/: README.md  pyproject.toml
data_pipeline/bidpilot_data/: __init__.py  __main__.py  bootstrap.py  cli.py  logging.py  settings.py
data_pipeline/configs/: pipeline.yaml  sft_balance.yaml  sft_tasks.yaml  source_sites.example.yaml  source_sites.yaml  taxonomy.yaml
data_pipeline/tests/: conftest.py  test_collect_dedup.py  test_db_import_idempotent.py  test_label_review_sft.py  test_match_supplier_rag_sft.py  test_official_sources.py  test_parsers_chunking.py  test_quality_fixes.py  test_rag_evidence.py  test_reference_dataset.py  test_schemas.py  test_split_consistency.py  test_training_gates.py
(+394 files in other folders)
