[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bidpilot-backend"
version = "0.1.0"
description = "BidPilot backend API — tender analysis and compliance review"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
  "minio>=7.2.0",
  "qdrant-client>=1.12.0",
  "python-multipart>=0.0.12",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "beautifulsoup4>=4.12.0",
  "openpyxl>=3.1.0",
  "tiktoken>=0.8.0",
  "opensearch-py>=2.7.0",
  "sentence-transformers>=3.3.0",
  "langgraph>=0.2.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "types-redis",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
plugins = []
mypy_path = "."
packages = ["app"]

[[tool.mypy.overrides]]
module = [
  "minio.*",
  "qdrant_client.*",
  "redis.*",
  "pypdf.*",
  "docx.*",
  "bs4.*",
  "openpyxl.*",
  "tiktoken.*",
  "opensearchpy.*",
  "sentence_transformers.*",
  "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
