[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bidpilot-data"
version = "0.1.0"
description = "BidPilot data pipeline for tender document processing and dataset construction"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "typer>=0.14.0",
  "rich>=13.9.0",
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  "pyyaml>=6.0.2",
  "orjson>=3.10.0",
  "jsonlines>=4.0.0",
  "pymupdf>=1.24.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.3.0",
  "pandas>=2.2.0",
  "rapidfuzz>=3.10.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
]
ocr = [
  "paddleocr>=2.8.0",
]

[project.scripts]
bidpilot-data = "bidpilot_data.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["bidpilot_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
